--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -17,8 +17,9 @@
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.1.5",
     "react-icons": "^4.11.0",
-    "recharts": "^2.8.0"
+    "recharts": "^2.8.0",
+    "swr": "^2.1.5",
+    "yarn": "^1.22.22"
   }
 }
